# hello-resin

./: .travis.yml  Cargo.toml  Dockerfile.template  README.md  Rocket.toml  flow.puml  openapi.yaml
src/: device.rs  main.rs  zone.rs
src/api/: mod.rs  zones.rs
src/api/devices/: mod.rs  tests.rs
src/api/zones/: mod.rs  tests.rs
