[package]
name = "smart-home"
version = "0.1.0"
authors = ["Callum Dunster <calonthexbox@hotmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = {version = "0.3.17", default-features = false, features = ["uuid", "json"]}
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.80"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
